--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://glitch.com/favicon.ico" />
 
-    <title>Hello world!</title>
-
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css" />
 
@@ -15,8 +13,18 @@
   </head>
   <body>
     <!-- this is the start of content -->
+    <section class="topnav" id="my Topnav">
+      <a class="Home"
+         <a href="#home">Home</a>
+    <a href="#About">About</a>
+    <a href="#services">Services</a>
+    <a href="#Lookbook">Lookbook</a>
+    <a href="#News">News</a>
+    <a href="#Contact">Contact</a>
+    <a href="javascript:void"
+         
     <h1>
-      Hello World!
+     
     </h1>
     <p>
       This starter gives you everything you need to start working on a new
