🎳🙏 Checkpoint ./index.html:41095882/24

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <a href="#Lookbook">Lookbook</a>
     <a href="#News">News</a>
     <a href="#Contact">Contact</a>
-    <a href="javascript:void"
+    <a href="javascript:void(0);"
+       class="icon"
          
     <h1>
      
