👝🤑 Checkpoint ./index.html:41095882/175 ./style.css:41095882/17

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
     <a href="#Contact">Contact</a>
     <a href="javascript:void(0);"
        class="icon"
+       </a>
+    </section>
     <section class="mainimage" id="main image">
-    <a class="hair"
-       <img src="https://cdn.glitch.global/fc4a6dd1-6150-4e05-b8a2-9a71e18cf9fe/adrian-fernandez-t1jlLrsMpjc-unsplash.jpg?v=1645163956025" alt="hair">
+    <img src="https://cdn.glitch.global/fc4a6dd1-6150-4e05-b8a2-9a71e18cf9fe/adrian-fernandez-t1jlLrsMpjc-unsplash.jpg?v=1645163956025" alt="hair" width="490" height="500">
   
     </section>
   
