👟🏭 Checkpoint ./index.html:41095882/103 ./style.css:41095882/38

--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
     <a href="#News">News</a>
     <a href="#Contact">Contact</a>
     <a href="javascript:void(0);"
-       class="icon"
+       class="icon" onclick="myfunction()">
+      <i class="fa fa bars"></i>
        </a>
     </section>
     <section class="mainimage" id="main image">
-    <img src="https://cdn.glitch.global/fc4a6dd1-6150-4e05-b8a2-9a71e18cf9fe/adrian-fernandez-t1jlLrsMpjc-unsplash.jpg?v=1645163956025" alt="hair" width="490" height="500">
+    <img src="https://cdn.glitch.global/fc4a6dd1-6150-4e05-b8a2-9a71e18cf9fe/adrian-fernandez-t1jlLrsMpjc-unsplash.jpg?v=1645163956025" alt="hair" width="900" height="700">
   
     </section>
   
