🗺👯 Checkpoint ./index.html:41095882/269 ./style.css:41095882/164

--- a/index.html
+++ b/index.html
@@ -28,12 +28,11 @@
     </section>
     <section class="mainimage" id="main image">
     <img src="https://cdn.glitch.global/fc4a6dd1-6150-4e05-b8a2-9a71e18cf9fe/adrian-fernandez-t1jlLrsMpjc-unsplash.jpg?v=1645163956025" alt="hair" width="900" height="700">
-  
     </section>
   
-    <h1>
+  <div class="top-left">Jazzy's Beauty Den</div>
      
-    </h1>
+   
     
   </body>
 </html>
