🏑👨‍❤️‍👨 Checkpoint ./style.css:41095882/237 ./index.html:41095882/211

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
     </section>
   
   <div class="top-left">Jazzy's Beauty Den</div>
-     
+    <section class="chat popup" id="MyForm">
+      <form action="/action_page.php" class="form-container">
+        <h1>Chat</h1>
+      </form>
    
     
   </body>
