🚕👨‍❤️‍💋‍👨 Checkpoint ./index.html:41095882/169

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <section class="chat popup" id="MyForm">
       <form action="/action_page.php" class="form-container">
         <h1>Chat</h1>
+        <label for="msg"><b>Message</b><label>
+          <textarea placeholder="Type Message..." name="msg" required></textarea>
       </form>
    
     
