--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
         <h1>Chat</h1>
         <label for="msg"><b>Message</b><label>
           <textarea placeholder="Type Message..." name="msg" required></textarea>
-      </form>
+          <button type="submit"
+                  class="btn">Send</button>
+          <button type="button" class="btn cancel"
+                  onclick="closeform()">
+            Close</button></form>
    
     
   </body>
