--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
   <div class="top-left">Jazzy's Beauty Den</div>
     <section class="chat popup" id="MyForm">
       <form action="/action_page.php" class="form-container">
-        <h1>Chat</h1>
+        <h1>Make an Appointment</h1>
         <label for="msg"><b>Message</b><label>
-          <textarea placeholder="Type Message..." name="msg" required></textarea>
+          <textarea placeholder="How can we help you?" name="msg" required></textarea>
           <button type="submit"
                   class="btn">Send</button>
           <button type="button" class="btn cancel"
