🎡🏟 Checkpoint ./index.html:41095882/533 ./style.css:41095882/113

--- a/index.html
+++ b/index.html
@@ -35,13 +35,22 @@
       <form action="/action_page.php" class="form-container">
         <h1>Make an Appointment</h1>
         <label for="msg"><b>Message</b><label>
-          <textarea placeholder="How can we help you?" name="msg" required></textarea>
+          <textarea placeholder="Desired hairstyle and appointment date go here!" name="msg" required></textarea>
           <button type="submit"
                   class="btn">Send</button>
           <button type="button" class="btn cancel"
                   onclick="closeform()">
             Close</button></form>
    
+<section class="hours of operation" id="storehours">
+<table>
+<tr><th>Sunday</th><td>Closed</td></tr>
+<tr><th>Monday</th><td>10am - 7pm</td></tr>
+<tr><th>Tuesday</th><td>10am - 7pm</td></tr>
+<tr><th>Wednesday</th><td>10am - 7pm</td></tr>
+<tr><th>Thursday</th><td>10am - 7pm</td></tr>
+</table>   
+</section>
     
   </body>
 </html>
