--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
           <button type="submit"
                   class="btn">Send</button>
           <button type="button" class="btn cancel"
-                  onclick="closeform()">
-            Close</button></form> 
-<section class="hours of operation" id="storehours">
+                  onclick="closeform()">Close</button></form> 
+
+<section class="operation-hours" id="storehours">
 <table>
 <tr><th>Sunday</th><td>Closed</td></tr>
 <tr><th>Monday</th><td>10am - 7pm</td></tr>
