--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a class="Home"
          <a href="#home">Home</a>
     <a href="#About">About</a>
-    <a href="#services">Services</a>
+    <a href="https://hair-pricing-sheet.glitch.me/">Services</a>
     <a href="#Lookbook">Lookbook</a>
     <a href="#News">News</a>
     <a href="#Contact">Contact</a>
