--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <i class="fa fa bars"></i>
        </a>
     <section class="mainimage" id="main image">
-    <img src="https://cdn.glitch.global/fc4a6dd1-6150-4e05-b8a2-9a71e18cf9fe/adrian-fernandez-t1jlLrsMpjc-unsplash.jpg?v=1645163956025" alt="hair" width="1000" height="900">
+    <img src="" alt="hair" width="1000" height="900">
     </section>
   
   <div class="top-left"</div>Jazzy's Beauty Den</div>
