--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
       <a class="Home"
          <a href="#home">Home</a>
     <a href="#About">About</a>
-    <a href="#services">Services</a>
+    <a href="https://hair-price-beauty-.glitch.me">Services</a>
     <a href="#Lookbook">Lookbook</a>
-    <a href="#News">News</a>
     <a href="#Contact">Contact</a>
     <a href="javascript:void(0);"
        class="icon" onclick="myfunction()">
