🐽🍁 Checkpoint ./style.css:41095882/98 ./index.html:41095882/258

--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
     <a href="#Contact">Contact</a>
     <a href="javascript:void(0);"
        class="icon" onclick="myfunction()">
-      <i class="fa fa bars"></i>
-       </a>
-    <section class="mainimage" id="main image">
+      <i class="fa fa bars"></i></a>
+    <section class="main image" id="main image">
     <img src="https://cdn.glitch.global/fc4a6dd1-6150-4e05-b8a2-9a71e18cf9fe/adrian-fernandez-t1jlLrsMpjc-unsplash.jpg?v=1645163956025" alt="hair" width="1000" height="900">
     </section>
+    </section>
   
-  <div class="top-left"</div>Jazzy's Beauty Den</div>
-    
+  <div class="top-left">
+    <div style="font-size:10vw"></div>Jazzy's Beauty Den</div>
+
   </body>
 </html>
