--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
        class="icon" onclick="myfunction()">
       <i class="fa fa bars"></i></a>
     <section class="main image" id="main image">
-    <img src="https://cdn.glitch.global/fc4a6dd1-6150-4e05-b8a2-9a71e18cf9fe/adrian-fernandez-t1jlLrsMpjc-unsplash.jpg?v=1645163956025" alt="hair" width="1000" height="900">
+    <img src="https://cdn.glitch.global/fc4a6dd1-6150-4e05-b8a2-9a71e18cf9fe/adrian-fernandez-t1jlLrsMpjc-unsplash__1_-removebg-preview.png?v=1654136938511" alt="hair" width="1000" height="900">
     </section>
     </section>
   
