--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
   </head>
   <body>
     <!-- this is the start of content -->
-    
-  
-  <div class="top-left">
-    <div style="font-size:10vw"></div>Jazzy's Beauty Den</div>
- <section class="topnav" id="my Topnav">
+    <section class="topnav" id="my Topnav">
       <a class="Home"
          <a href="#home">Home</a>
     <a href="#About">About</a>
@@ -30,7 +26,12 @@
        class="icon" onclick="myfunction()">
       <i class="fa fa bars"></i></a>
     <section class="main image" id="main image">
-      </section>
+    <img src="https://cdn.glitch.global/fc4a6dd1-6150-4e05-b8a2-9a71e18cf9fe/adrian-fernandez-t1jlLrsMpjc-unsplash.jpg?v=1645163956025" alt="hair" width="1000" height="900">
     </section>
+    </section>
+  
+  <div class="top-left">
+    <div style="font-size:10vw"></div>Jazzy's Beauty Den</div>
+
   </body>
 </html>
