--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <body>
  <nav>
   <a href="#">Home</a>
+  <a href="#">About</a>
+  <a href="#">Blog</a>
   <a href="#">Portefolio</a>
   <a href="#">Contact</a>
   <div class="animation start-home"></div>
