--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap" rel="stylesheet">
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css" />
-
+<title>Jazzy's Beauty Den</title>
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
   </head>
@@ -20,9 +20,9 @@
   <a href="https://hair-price-beauty-.glitch.me">Portefolio</a>
   <a href="#">Contact</a>
   <div class="animation start-home"></div>
-</nav>
+</nav> 
 <h1>Jazzy's Beauty Den</h1>  
- <img src="https://cdn.glitch.global/fc4a6dd1-6150-4e05-b8a2-9a71e18cf9fe/afro-textured-hair-black-hairstyle-woman-afro-a1a44b0b69c75abce195c226238a69a4.png?v=1654137856764">
+ <img src="https://cdn.glitch.global/fc4a6dd1-6150-4e05-b8a2-9a71e18cf9fe/afro-textured-hair-black-hairstyle-woman-afro-a1a44b0b69c75abce195c226238a69a4.png?v=1654137856764" alt="Black woman with afro on center of page">
     
     
   
